Pass through intro, 2.1 and 2.2

--- a/Talk7/02_background/02-2_blockchain.tex
+++ b/Talk7/02_background/02-2_blockchain.tex
@@ -1,42 +1,42 @@
 \subsection{Blockchain}
 \label{subsec:02_blockchain}
 
-Connected to the growing popularity of the Bitcoin Crpytocurrency that conquered the markets of the world, the interest for its underlying technology - the Blockchain - grew in a similar manner. The idea of having a fully decentralized, tamperproofed distributed online ledger was starting to not only conquer the digital business world but also other fields like property management and personal data management. And while Bitcoin itself gained a lot of bad reputation due to its fluctuation \cite{Shackelford2016}, the Blockchain on the contrary continued its triumphal procession until to day and up to a point where one might ask himself: Is the Blockchain a solution for existing problems or is the Blockchain the problem itself? \cite{Stinchcombe2017} \cite{Nielsen2018} \cite{Lunn2015}
+Connected to the growing popularity of the Bitcoin Cryptocurrency that conquered the markets of the world, the interest for its underlying technology - the Blockchain - grew similarly. The idea of having a fully decentralized, tamper-proofed distributed online ledger was starting to conquer not only the digital business world but also other fields like property management and personal data management. Moreover, while Bitcoin itself gained a bad reputation due to its fluctuation \cite{Shackelford2016}, the Blockchain, on the contrary, continued its triumphal procession until today and up to a point where one might ask himself: Is the Blockchain a solution for existing problems or is the Blockchain the problem itself? \cite{Stinchcombe2017} \cite{Nielsen2018} \cite{Lunn2015}
 
-In the following subsection the Blockchain technology itself, its advantages and disadvantages, the reason for its popularity as well as its usage are going to be explained in detail. Nevertheless it is not the goal of this section to give full technical insights into the various mechanisms of the blockchain nor its mathematical background, but to provide a good base of knowledge for the chapters to come.
+In the following subsection the Blockchain technology itself, its advantages and disadvantages, the reason for its popularity as well as its usage are going to be explained in detail. Nevertheless, it is not the goal of this section to give full technical insights into the various mechanisms of the blockchain nor its mathematical background, but to provide a good base of knowledge for the chapters to come.
 
 \subsubsection{The Blockchain in Detail}
-The Blockchain is a shared, trusted, publicly available and inspectable online ledger containing a chain of interlinked blocks holding information. Important hereby is the fact that no single user controls, updates or maintains the blockchain. Instead every action performed on the blockchain is following strict rules and a consensus amongst all users that access it \cite{Shackelford2016}. Because of the way its blocks are interlinked by a cryptographic hash, the Blockchain is tamperproof in the sense that no changes can be made in hindsight without being traceable. 
+The Blockchain is a shared, trusted, publicly available and inspectable online ledger containing a chain of interlinked blocks holding information. Important hereby is the fact that no single user controls, updates or maintains the blockchain. Instead, every action performed on the blockchain is following strict rules and a consensus amongst all users that access it \cite{Shackelford2016}. Because of the way its blocks are interlinked by a cryptographic hash, the Blockchain is tamper-proof in the sense that no changes can be made in hindsight without being traceable.
 More technically \cite{BenAyed2017}!
-Each of the blocks within the Blockchain is itself is a datastructure.  This datastructure allows to store transactions between peers. Transactions can refer to any kind of digital or real world transaction between two or multiple people \cite{Wust2017}.
+Each of the blocks within the Blockchain is itself is a data structure.  This data structure allows storing transactions between peers. Transactions can refer to any digital or real-world transaction between two or multiple people \cite{Wust2017}.
 
 
 
-And herein lies the real fascination of the Blockchain mechanism, as it represents a platform or more generally a datastructure that allows humans and computers to interact with each other, without having to rely upon trusted third parties. Instead it is the controlling power of the datastructure itself or put differently, the consensus amongst all users, that assures each parties compliance with their part of a deal. As a results, it allows "people who have no particular confidence in each other [to] collaborate without having to go through a neutral central authority" and becomes "a machine that creates trust" (\cite{Economist2015} as cited in \cite{Shackelford2016}).
+Also, herein lies the real fascination of the Blockchain mechanism, as it represents a platform or more generally a data structure that allows humans and computers to interact with each other, without having to rely upon trusted third parties. Instead, it is the controlling power of the data structure itself or put differently, the consensus amongst all users, that assures each parties compliance with their part of a deal. As a result, it allows "people who have no particular confidence in each other [to] collaborate without having to go through a neutral central authority" and becomes "a machine that creates trust" (\cite{Economist2015} as cited in \cite{Shackelford2016}).
 \subsubsection{Properties of the Blockchain}
-The Blockchain has the major advantage that multiple desired properties of a datastructure lie within its very nature itself, that with traditional structures can only be achieved through additional mechanisms. A list with a short explanation will compile the most important of them \cite{Wust2017}:
+The Blockchain has the major advantage that multiple desired properties of a data structure lie within its very nature itself, that with traditional structures can only be achieved through additional mechanisms. A list with a short explanation will compile the most important of them \cite{Wust2017}:
 \begin{itemize}
-	\item \textbf{Public verifiability}: The public verifiablity refers to the process of controlling the data in order to assure that the data has not been corrupted. The Blockchain has the major advantage over other datastructures, that every observer can at all times verify that the it is in a valid state and that all the changes made to its blocks are according to the protocoll. This can not be achieved by traditional centralized systems without additional complex control mechanisms.
-	  As a result of that, a higher integrity of the data itself can be guaranteed because more peers are able control the validity of the contained data.
-	\item \textbf{Transparency \& Privacy}: The Blockchain and its transactions can be viewed by everyone with access to it. But the more transparent data is, the less private it becomes. Therefore an area of conflict exists between these two properties. For each individual use case it has to be decided where in between the extreme cases of a fully transparent and a fully private Blockchain it lies.
-	
-	\item \textbf{Redundancy}: The Blockchain reduces the chances of loosing data by its distributed nature itself. Each peer containes parts of the whole Blockchain locally. The chance that data gets lost is therefore extremely small. To achieve this in centralized systems, multiple copies of the data have to be stored in different places (e.g. in different physical locations).
-	\item \textbf{Anonimity}: 
+    \item \textbf{Public verifiability}: The public verifiability refers to the process of controlling the data to assure that the data has not been corrupted. The Blockchain has the significant advantage over other data structures that every observer can at all times verify that it is in a valid state and that all the changes made to its blocks are according to the protocol. Traditional centralized systems cannot achieve this without additional complex control mechanisms.
+      As a result of that, higher integrity of the data itself can be guaranteed because more peers can control the validity of the contained data.
+    \item \textbf{Transparency \& Privacy}: Everyone with access to it can view the Blockchain and its transactions. However, the more transparent data is, the less private it becomes. Therefore an area of conflict exists between these two properties. For each use case, it has to be decided where in between the extreme cases of a fully transparent and an entirely private Blockchain it lies.
+
+    \item \textbf{Redundancy}: The Blockchain reduces the chances of losing data by its distributed nature itself. Each peer contains parts of the whole Blockchain locally. The chance that data gets lost is therefore extremely small. To achieve this in centralized systems, multiple copies of the data have to be stored in different places (e.g., in different physical locations).
+    \item \textbf{Anonimity}:
 \end{itemize}
-Depending on the use case e.g. whether privacy is desired or not, a Blockchain can be the right or the wrong choice. Nevertheless it provides a handful of advantages over traditional datastructures by beeing decentralized and public. The farther away from those properties one tries to push the design of a Blockchain, the more one has to ask, whether a Blockchain is the best idea for a specific application.
+Depending on the use case, e.g. whether privacy is desired or not, a Blockchain can be the right or the wrong choice. Nevertheless, it provides a handful of advantages over traditional data structures by being decentralized and public. The farther away from those properties one tries to push the design of a Blockchain, the more one has to ask whether a Blockchain is the best idea for a specific application.
 
 \subsubsection{Common scenarios for usage}
-The Blockchain per se is nothing else than a very sophisticated and yet simple datastructure. But due to its various properties its range of usage did not just end with on the boundaries of the digital world but started to conquer other areas and fields as well. Even though the below list is neither exhaustive nor its items disjunct, it shows the most common scenarios for the use of the Blockchain\cite{Wust2017}:
+The Blockchain per se is nothing else than a very sophisticated and yet simple data structure. However, due to its various properties its range of usage did not just end with on the boundaries of the digital world but started to conquer other areas and fields as well. Even though the below list is neither exhaustive nor its items disjunct, it shows the most common scenarios for the use of the Blockchain\cite{Wust2017}:
 \begin{itemize}
   \item Crypto Currencies: From the moment, when the paper by \citeauthor{Nakamoto2008} was published Blockchains and Crypto Currencies were interlinked. Because a Crypto Currency is per definition a digital asset, the Blockchain suites this use case particularly well.
-  \item Supply Chain Management (SCM): In Supply Chain Management the flow of materials and services is managed. This flow of goods includes "various intermediate storage and production cycles" \cite{Wust2017} and therefore has a high complexity. The wish that data can be accessed and verified  by all actors without the need of a trusted third party leads quickly to the idea of using the Blockchain as a way to store and monitor all processes in a tamperproof manner.
-  \item Payment and Money Transactions: Transactions between different banks and the resulting temporary debts between them are traditionally solved by using \textit{Nostro} accounts and by making use of central banks in order to minimize risks. Therefore, for a single transaction multiple parties have to be included. Even more parties would be included if transactions were international. This high complexity leads to long transaction confirmation time and additional costs. These issues can be solved using \textit{Distributed Ledger Technologies}, that make use of a Blockchain to settle debts. The bank then deposits some amount of money with another bank and receives in return the same amount in the Blockchain.
-  \item Smart Contracts: "Smart contracts are digital contracts that are self enforcing" and run on the Blockchain as a "distributed state machine" \cite{Wust2017}. They therefore do not rely upon a trusted third party. Even though they are listed as common use scenario for the Blockchain, their use is not limited to a specific field.
-  \item Decentralized Autonomous Organizations (DAO): "A DAO is an organization that is run autonomously through a set of smart contracts" \cite{Wust2017} and there is therefore no central controlling unit or management. A DAO is fundamentally dependent of the Blockchain, as it relies on a decentralized governance of funds enforced by Smart Contracts.
-  \item Proof of Ownership: The idea of proofing the intellectual property is one of the most straightforward use cases for the Blockchain. In this scenario, the user registers his or her property (e.g image, text or other object) through the use of an identity function such as a hash in the Blochchain. "While this does not fully prove ownership, it does provide evidence of owenership if no one else can show that the object was previously published" \cite{Wust2017}. As a special case, also the registration of land titles and property registration falls into this use case scenario: In countries where corruption dominates the integriy of official documents, the Blockchain can be used ro first register land or property and later validate a specific claim for a piece of land.
+  \item Supply Chain Management (SCM): In Supply Chain Management the flow of materials and services is managed. This flow of goods includes "various intermediate storage and production cycles" \cite{Wust2017} and therefore has a high complexity. The wish that data can be accessed and verified by all actors without the need of a trusted third party leads quickly to the idea of using the Blockchain as a way to store and monitor all processes in a tamperproof manner.
+  \item Payment and Money Transactions: Transactions between different banks and the resulting temporary debts between them are traditionally solved by using \textit{Nostro} accounts and by making use of central banks to minimize risks. Therefore, for a single transaction, multiple parties have to be included. Even more parties would be included if transactions were international. This high complexity leads to long transaction confirmation time and additional costs. These issues can be solved using \textit{Distributed Ledger Technologies}, that make use of a Blockchain to settle debts. The bank then deposits some amount of money with another bank and receives in return the same amount in the Blockchain.
+  \item Smart Contracts: "Smart contracts are digital contracts that are self-enforcing" and run on the Blockchain as a "distributed state machine" \cite{Wust2017}. They, therefore, do not rely upon a trusted third party. Even though they are listed as common use scenario for the Blockchain, their use is not limited to a specific field.
+  \item Decentralized Autonomous Organizations (DAO): "A DAO is an organization that is run autonomously through a set of smart contracts" \cite{Wust2017}, and there is, therefore, no central controlling unit or management. A DAO is fundamentally dependent on the Blockchain, as it relies on decentralized governance of funds enforced by Smart Contracts.
+  \item Proof of Ownership: The idea of proofing intellectual property is one of the most straightforward use cases for the Blockchain. In this scenario, the user registers his or her property (e.g., image, text or another object) through the use of an identity function such as a hash in the Blockchain. "While this does not fully prove ownership, it does provide evidence of ownership if no one else can show that the object was previously published" \cite{Wust2017}. As a special case, also the registration of land titles and property registration falls into this use case scenario: In countries where corruption dominates the integrity of official documents, the Blockchain can be used to first register land or property and later validate a specific claim for a piece of land.
   \item E-Voting: Many desired properties connected to e-Voting are congruent with the Blockchains properties others are not. While the Blockchain can fulfill many E-Voting requirements such as public verifiability and the involvement of many parties that do not trust each other into one process, it cannot fulfill the privacy aspect of a Voting without the need of other mechanisms. Therefore multiple solutions exist, but none has been shown to be secure, verifiable and private at the same time.
-  \item IoT: Another possible use case for the Blockchain technology is the combination of Smart Contracts and the Internet of Things. It allows different IoT-devices to acutally interact with each other and autonomously exchange information and goods on the basis of the Blockchain.
+  \item IoT: Another possible use case for Blockchain technology is the combination of Smart Contracts and the Internet of Things. It allows different IoT-devices to actually interact with each other and autonomously exchange information and goods based on the Blockchain.
 \end{itemize}
 \subsubsection{The Blockchain and Cybersecurity}
-The application of the Blockchain to the topic of Cybersecurity is twofold: In most cases the Blockchain technology is used within applications of any sorts and kinds to make them more secure. More secure databases, transaction systems for banks, the replacement of Certificate Authorities or the security of critical physical infrastructures such as atomic plants or the power grid fall into this category. Another field of applications, even though less often seen uses the blockchain directly to mitigate cyberattacks. Examples are the mitigation of DDoS Attacks or the handlich of PKI related cyberthreats through the use of the Blockchain technology. These applications that fall into the second category, use the Blockchain more directly and immediate, while the first category uses them on a higher level, to help reducing the cybersecurity threats due to the set up of the application itself with use of the Blockchain.
-In this paper both of those categories are discussed and explained.   
+The application of the Blockchain to the topic of Cybersecurity is twofold: In most cases, the Blockchain technology is used within applications of any sorts and kinds to make them more secure. More secure databases, transaction systems for banks, the replacement of Certificate Authorities or the security of critical physical infrastructures such as atomic plants or the power grid fall into this category. Another field of applications, even though less often seen uses the blockchain directly to mitigate cyber attacks. Examples are the mitigation of DDoS Attacks or the handling of PKI related cyber threats through the use of Blockchain technology. These applications that fall into the second category use the Blockchain more direct and immediate, while the first category uses them on a higher level, to help to reduce the cybersecurity threats due to the set up of the application itself with use of the Blockchain.
+In this paper, both of those categories are discussed and explained.
