Work through everything

--- a/Talk7/03_related_work/03-1_ddos.tex
+++ b/Talk7/03_related_work/03-1_ddos.tex
@@ -104,7 +104,7 @@ To conclude the work of this paper, the authors registered that none of the foll
 
 \subsubsection{Multi domain DDoS Mitigation based on blockchains}
 % \cite{Rodrigues2017a}
-Another approach repeatedly uses smart contracts and therefore blockchain as a mean to advertise information across multiple domains. The architecture as seen in figure \ref{ddos_multi_domain_architecture} involves the following entities: \textbf{Software-Defined Networks (SDN)} facilitate the development of customizable security management. \textbf{Network Function Virtualization (NFV)}, that are provisioned in generic hardware, strengthen security policies through virtualized functions. An Ethereum-based \textbf{blockchain} is a base for all participants of the cooperative network to advertise DDoS attacks within a timeframe of 14s, in which a new block is mined. At last a \textbf{smart Contracts} which is storing black or whitelisted IP addresses of customers \cite{Rodrigues2017a}.
+Another approach repeatedly uses smart contracts and therefore blockchain as a mean to advertise information across multiple domains. The architecture as seen in figure \ref{ddos_multi_domain_architecture} involves the following entities: \textbf{Software-Defined Networks (SDN)} facilitate the development of customizable security management. \textbf{Network Function Virtualization (NFV)} that are provisioned in generic hardware strengthen security policies through virtualized functions. An Ethereum-based \textbf{blockchain} is a base for all participants of the cooperative network to advertise DDoS attacks within a timeframe of 14s, in which a new block is mined. At last a \textbf{smart Contracts} which is storing black or whitelisted IP addresses of customers \cite{Rodrigues2017a}.
 
 \begin{figure}[ht]
   \begin{center}
