fix bib errors not compiling

--- a/Talk7/03_related_work/03-1_ddos.tex
+++ b/Talk7/03_related_work/03-1_ddos.tex
@@ -13,7 +13,7 @@ A DDoS (Distributed Denial of Service) attack has become a popular way to crippl
   \item Distribution of control: In a world of a distributed network, such as the Internet, multiple clients participate in that network. Each one of them has different security mechanisms. No global control entity can define a security policy or standard.
 \end{itemize}
 % Additional reasons/base of attacks
-Since the number of connected devices has increased due to IoT devices such as connected cameras, or smart fridges, attackers have a growing capacity to take control of unsecured devices \cite{Rodrigues2017a}.
+Since the number of connected devices has increased due to IoT devices such as connected cameras, or smart fridges, attackers have a growing capacity to take control of unsecured devices \cite{Rodrigues2017}.
 
 % Explaining DDoS
 By operating multiple attacking entities so-called computer bots (clients that have been taken over by malware) remotely, attackers try to overflood a website, a network or a server and prevent rightful users from accessing the application. The service is either responding slowly or shut down. More precisely, attackers send a stream of packets to the victims, which consume all capacity of hardware resources and therefore make it unavailable for legitimate clients to access the service provider. Another popular way for an attacker is to send malformed packets to shut down the availability of the application service. Those packets confuse the web application or some protocols on the victims' hardware and force the server to reboot. There are probably some additional possibilities to shut down services on the internet. Such attack possibilities will be discovered first when they have been exploited in a significant attack and servers have been down for a particular time \cite{Mirkovic2004}.
@@ -31,7 +31,7 @@ Various companies (known from other services) currently offer DDoS protection se
 
 % TODO More about DOTS (DDoS Open Threat Signaling) an IETF proposal
 % TODO probably explain Gladius?
-The Internet Engineering Task Force (IETF) additionally is proposing a protocol called DOTS (DDos Open Threat Signaling) that requires both client and server. A new protocol is required which has to be maintained. DOTS clients have to register to a DOTS server and use this protocol among the agents to organize the DDoS protection \cite{Rodrigues2017a}. In the following sections, various approaches to mitigating DDoS attacks are illustrated as seen in popular papers without the need to deploy a new protocol.
+The Internet Engineering Task Force (IETF) additionally is proposing a protocol called DOTS (DDos Open Threat Signaling) that requires both client and server. A new protocol is required which has to be maintained. DOTS clients have to register to a DOTS server and use this protocol among the agents to organize the DDoS protection \cite{Rodrigues2017}. In the following sections, various approaches to mitigating DDoS attacks are illustrated as seen in popular papers without the need to deploy a new protocol.
 
 \subsubsection{DDos Mitigation with Smart Contracts}
 % \cite{Rodrigues2017}
@@ -104,7 +104,7 @@ To conclude the work of this paper, the authors registered that none of the foll
 
 \subsubsection{Multi domain DDoS Mitigation based on blockchains}
 % \cite{Rodrigues2017a}
-Another approach repeatedly uses smart contracts and therefore blockchain as a mean to advertise information across multiple domains. The architecture as seen in figure \ref{ddos_multi_domain_architecture} involves the following entities: \textbf{Software-Defined Networks (SDN)} facilitate the development of customizable security management. \textbf{Network Function Virtualization (NFV)} that are provisioned in generic hardware strengthen security policies through virtualized functions. An Ethereum-based \textbf{blockchain} is a base for all participants of the cooperative network to advertise DDoS attacks within a timeframe of 14s, in which a new block is mined. At last a \textbf{smart Contracts} which is storing black or whitelisted IP addresses of customers \cite{Rodrigues2017a}.
+Another approach repeatedly uses smart contracts and therefore blockchain as a mean to advertise information across multiple domains. The architecture as seen in figure \ref{ddos_multi_domain_architecture} involves the following entities: \textbf{Software-Defined Networks (SDN)} facilitate the development of customizable security management. \textbf{Network Function Virtualization (NFV)} that are provisioned in generic hardware strengthen security policies through virtualized functions. An Ethereum-based \textbf{blockchain} is a base for all participants of the cooperative network to advertise DDoS attacks within a timeframe of 14s, in which a new block is mined. At last a \textbf{smart Contracts} which is storing black or whitelisted IP addresses of customers \cite{Rodrigues2017}.
 
 \begin{figure}[ht]
   \begin{center}
@@ -115,12 +115,12 @@ Another approach repeatedly uses smart contracts and therefore blockchain as a m
 \end{figure}
 
 %  conclusion of paper
-This architecture is based on key technologies such as software-defined networks (SDN) and network function virtualization (NFV). Blockchain and smart contracts advertise DDoS attacks information to broadcast white or blacklisted addresses without building any distribution mechanisms or protocols \cite{Rodrigues2017a}.
+This architecture is based on key technologies such as software-defined networks (SDN) and network function virtualization (NFV). Blockchain and smart contracts advertise DDoS attacks information to broadcast white or blacklisted addresses without building any distribution mechanisms or protocols \cite{Rodrigues2017}.
 
 \subsubsection{Blockchain Signaling System (BloSS)}
 % https://github.com/blockchain-signaling-system/bloss-core
 % https://github.com/savf/BloSS
 % \cite{Rodrigues2019}
 
-Similarly to \cite{Rodrigues2017a}, this paper deals with cooperative, multi-domain DDoS defense systems, but it presents a Blockchain Signaling System (BloSS) which is a somewhat technical approach of deploying hardware simplifying signals of DDoS attacks. Principal components for a BloSS are smart contracts that describe how information has to be transferred between Autonomous Systems (AS) and decentralized applications that include parameters defining the interaction of AS. Additionally, a consortium based blockchain, differentiating from the public and private blockchains, serves as an intermediary level of confidence. An Autonomous System (AS) thereby creates a wallet and notifies a smart contract that stores some information. The smart contract then implements a method to reclaim addresses published by other systems by querying a central smart contract. This central SC is used to configure all involved smart contracts with updated information on their managed IP networks, as the addresses of the involved wallets are immutable. In order to prevent free-riding peers (parties that only consume without any contribution), an incentive mechanism need to be set by defining tokens.  % TODO what do they do?
+Similarly to \cite{Rodrigues2017}, this paper deals with cooperative, multi-domain DDoS defense systems, but it presents a Blockchain Signaling System (BloSS) which is a somewhat technical approach of deploying hardware simplifying signals of DDoS attacks. Principal components for a BloSS are smart contracts that describe how information has to be transferred between Autonomous Systems (AS) and decentralized applications that include parameters defining the interaction of AS. Additionally, a consortium based blockchain, differentiating from the public and private blockchains, serves as an intermediary level of confidence. An Autonomous System (AS) thereby creates a wallet and notifies a smart contract that stores some information. The smart contract then implements a method to reclaim addresses published by other systems by querying a central smart contract. This central SC is used to configure all involved smart contracts with updated information on their managed IP networks, as the addresses of the involved wallets are immutable. In order to prevent free-riding peers (parties that only consume without any contribution), an incentive mechanism need to be set by defining tokens.  % TODO what do they do?
 %  TODO more about Architecture and Hardware?
