--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -8,6 +8,18 @@ url = {https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32016R0679
 urldate = {2019-04-10},
 year = {2017}
 }	
+@article{Dorri2017SmartHome,
+author = {Dorri, Ali and Kanhere, Salil S. and Jurdak, Raja and Gauravaram, Praveen},
+doi = {10.1109/PERCOMW.2017.7917634},
+isbn = {9781509043385},
+issn = {18732542},
+journal = {2017 IEEE International Conference on Pervasive Computing and Communications Workshops, PerCom Workshops 2017},
+pages = {618--623},
+pmid = {24894131},
+publisher = {IEEE},
+title = {{Blockchain for IoT security and privacy: The case study of a smart home}},
+year = {2017}
+}
 @article{DorriSteger2017,
 abstract = {Future smart vehicles will be part of the Internet of Things to offer beneficial development opportunities for both end users as well as the automotive industry. This will potentially expose smart vehicles to a range of security and privacy threats such as tracking or hijacking a vehicle while driving. A comprehensive security architecture for automotive systems is required to allow the development of new services while protecting the vehicles from attacks and ensuring the privacy of the end users. In this paper we argue that BlockChain (BC), a disruptive technology that has found many applications from cryptocurrency to smart contracts, is a potential solution to automotive security and privacy challenges. We propose a BC-based architecture to protect the privacy of the users and to increase the security of the vehicular eco-system. Wireless remote software updates and other emerging services in the automotive world such as dynamic vehicle insurance fees, are used to illustrate the utilization of the proposed security architecture. We also provide discussions on the security of the architecture against important attacks.},
 archivePrefix = {arXiv},
@@ -121,6 +133,25 @@ mendeley-groups = {ComSys Seminar},
 title = {{The Blockchain Is A Solution In Search Of A Problem Whistling In The Wind}},
 url = {https://whistlinginthewind.org/2018/06/13/the-blockchain-is-a-solution-in-search-of-a-problem/},
 urldate = {2019-04-06},
+year = {2018}
+}
+@article{Khan2018,
+abstract = {With the advent of smart homes, smart cities, and smart everything, the Internet of Things (IoT) has emerged as an area of incredible impact, potential, and growth, with Cisco Inc. predicting to have 50 billion connected devices by 2020. However, most of these IoT devices are easy to hack and compromise. Typically, these IoT devices are limited in compute, storage, and network capacity, and therefore they are more vulnerable to attacks than other endpoint devices such as smartphones, tablets, or computers. In this paper, we present and survey major security issues for IoT. We review and categorize popular security issues with regard to the IoT layered architecture, in addition to protocols used for networking, communication, and management. We outline security requirements for IoT along with the existing attacks, threats, and state-of-the-art solutions. Furthermore, we tabulate and map IoT security problems against existing solutions found in the literature. More importantly, we discuss, how blockchain, which is the underlying technology for bitcoin, can be a key enabler to solve many IoT security problems. The paper also identifies open research problems and challenges for IoT security.},
+archivePrefix = {arXiv},
+arxivId = {1705.08230},
+author = {Khan, Minhaj Ahmad and Salah, Khaled},
+doi = {10.1016/j.future.2017.11.022},
+eprint = {1705.08230},
+file = {:C$\backslash$:/Users/Silas/Dropbox/FS19/Seminar Communication Systems/papers/iot papers/IoT security Blockchain review.pdf:pdf},
+isbn = {0167-739X},
+issn = {0167739X},
+journal = {Future Generation Computer Systems},
+keywords = {Blockchain,Data security,IoT protocols,IoT security,Network security},
+pages = {395--411},
+publisher = {Elsevier B.V.},
+title = {{IoT security: Review, blockchain solutions, and open challenges}},
+url = {https://doi.org/10.1016/j.future.2017.11.022},
+volume = {82},
 year = {2018}
 }
 @article{Mannhart2018,
