start final consideratiosn

--- a/Talk7/03_related_work/03-4_iot.tex
+++ b/Talk7/03_related_work/03-4_iot.tex
@@ -65,4 +65,13 @@ and the last parameter is to indicate the action that should be done for the tra
 The miner in each smart homes authenticates, authorizes, and audits transactions.
 
 
+In the realm of IoT, blockchains can be useful wherever theres a need integrity and decentralization.
+
+
+
+
+
+
+
+
 
