--- a/Talk7/04_final_considerations/04_final_considerations.tex
+++ b/Talk7/04_final_considerations/04_final_considerations.tex
@@ -1,17 +1,10 @@
 \section{Final Considerations}
 
-\begin{itemize}
-  \item provide an overview of the section structure and contents (filler)
-\end{itemize}
-
+This sections goal is to summarize the key points of this paper and provide a discussion and outlook.
 \subsection{Summary}
 
-\textbf{Length: around 1 page}
+After giving some insight into cybersecurity, blockchain and smart contracts 
 
-\begin{itemize}
-  \item shortly summarize the overall work
-  \item show the main thesis
-\end{itemize}
 
 \subsection{Discussion}
 
